VCL: apply VSV00001 (DSA 3924-1) DoS workaround to text only
The VSV00001 DoS workaround applied to all clusters (caca0d4854) can now
be moved to text-only given that upload and misc have been upgraded to
varnish 4.1.8-1wm1 and are thus not vulnerable any longer.

Change-Id: I7cef7014a1b5f9575382cfdf8c02c196a88ea234

--- a/modules/varnish/templates/text-frontend.inc.vcl.erb
+++ b/modules/varnish/templates/text-frontend.inc.vcl.erb
@@ -44,7 +44,26 @@ sub mobile_redirect {
 	}
 }
 
+sub chunked_te_exploit_workaround {
+	if (req.http.transfer-encoding ~ "(?i)chunked") {
+		C{
+		struct dummy_req {
+			unsigned magic;
+			int step;
+			int req_body_status;
+		};
+		((struct dummy_req *)ctx->req)->req_body_status = 5;
+		}C
+
+		return (synth(503, "Bad request"));
+	}
+}
+
 sub cluster_fe_recv_pre_purge {
+	// VSV00001 - DoS vulnerability in Varnish Cache
+	// https://www.varnish-cache.org/lists/pipermail/varnish-announce/2017-August/000722.html
+	call chunked_te_exploit_workaround;
+
 	// Forged UAs on zerodot. This largely handles lazywebtools below, incidentally.
 	if (req.http.host ~ "zero\.wikipedia\.org" && req.http.User-Agent && req.http.User-Agent ~ "Facebookbot|Googlebot") {
 		return (synth(403, "Noise"));
